header jumbotron large

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/lib/12bool.css">
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Epilogue:ital,wght@1,300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Epilogue:wght@500;700&display=swap" rel="stylesheet">
     <title>Helbiz</title>
   </head>
   <body>
@@ -15,9 +17,23 @@
         <nav id="nav-large" class="centratura1">
           <div class="row">
 						<div class="col-xs-3 col-md-3  col-lg-3 ">
-
+              <div id="bottone">
+                <a href="#">Helbiz</a>
+              </div>
 						</div>
 						<div class="col-xs-7  col-xs-offset-2 col-md-7 col-md-offset-2 col-lg-7 col-lg-offset-2">
+              <div id="list">
+                <a href="#listati">HELBIZGO</a>
+                <a href="#listati">HELBIZCAR</a>
+                <a href="#listati">HELBIZAIR</a>
+                <a href="#listati">ABOUT</a>
+                <a href="#listati">CITIES</a>
+                <a href="#listati">CAREERS</a>
+                <a href="#listati">SHOP</a>
+                <a href="#listati-bordo">ENG</a>
+                <a href="#listati-bordo">ITA</a>
+                <a href="#listati">ES</a>
+              </div>
 
             </div>
 
@@ -28,6 +44,24 @@
 				<section id="jumbo">
           <div class="row">
 						<div class="col-xs-12 col-md-10 col-md-offset-1 col-lg-6 col-lg-offset-3">
+              <div id="jumbo-text">
+                <h2>Shared Mobility Of Tomorrow</h2>
+                <h5>Bringing the future of shared mobility to the streets of the world</h5>
+                <div class="row">
+                  <div class="col-lg-offset-4 col-lg-2">
+                    <div class="jumbo-store">
+                      <a href="#store"><img src="img/apple.png" alt="applestore"></a>
+                    </div>
+                  </div>
+
+                  <div class="col-lg-2">
+                    <div class="jumbo-store">
+                      <a href="#store"><img src="img/google.png" alt="googleplay"></a>
+                    </div>
+
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </section>
