parte pubblicità, social e prodotti generale

--- a/index.html
+++ b/index.html
@@ -74,10 +74,22 @@
         <section class="centratura2 margin-top">
           <div class="row">
             <div class="col-xs-12  col-md-6  col-lg-6 ">
+              <div class="prodotti">
+                <h3>HelbizGo</h3>
+                <span>Seamless E-Scooter sharing globally.</span>
+                <a href="#prodotti">Learn More &rsaquo;</a>
+                <img src="img/monopattino.jpg" alt="helbizgo">
+              </div>
 
 				    </div>
 
 						<div class="col-xs-12  col-md-6  col-lg-6 ">
+              <div class="prodotti">
+                <h3>HelbizBike</h3>
+                <span>Next generation of electric city bikes.</span>
+                <a href="#prodotti">Learn More &rsaquo;</a>
+                <img src="img/bici.jpg" alt="HelbizBike">
+              </div>
 
 			      </div>
 
@@ -91,6 +103,9 @@
         <section class="margin-top">
           <div class="row">
             <div class="col-xs-12 col-md-12 col-lg-12">
+              <div id="phone-swipe-top">
+                <img src="img/anziano.jpg" alt="HelbizGo">
+              </div>
 
             </div>
 
@@ -98,26 +113,26 @@
 
           <div class="row">
             <div class="col-xs-12 col-md-12 col-lg-offset-3 col-lg-2">
-              <div class="">
-
+              <div class="phone-swipe">
+                <h2>How does helbiz work?</h2>
               </div>
             </div>
 
             <div class="col-xs-12 col-md-12 col-lg-2">
-              <div class="">
-
+              <div class="phone-swipe">
+                <img src="img/iphone.png" alt="iphone-helbiz">
               </div>
             </div>
 
             <div class="col-xs-12 col-md-12 col-lg-2">
-
-
+              <div class="phone-swipe">
+                <h4>Step 1</h4>
+                <span>Leave curbside when finished</span>
+              </div>
 
             </div>
-
 
           </div>
-
 
         </section>
 
@@ -125,14 +140,34 @@
         <section class="centratura2 margin-top">
           <div class="row">
             <div class="col-xs-12 col-md-12 col-lg-12">
+              <div id="pubblicità-top">
+                <img src="img/scooter.jpg" alt="HelbizGo">
+                <div class="pubblicità-text">
+                  <h1>Smart mobility on two wheels</h1>
+                  <p>A cleaner and more convenient alternative to get around your city
+                  </p>
+                  <a href="#pubblicità">Learn More &rsaquo;</a>
+                </div>
+              </div>
 
             </div>
 
             <div class="col-xs-12 col-md-6 col-lg-6">
+              <div class="pubblicità-bottom">
+                <h1>Get the app</h1>
+                <h4>Download the app and start riding today</h4>
+                <a href="#pubblicità">IOS &rsaquo;</a>
+                <a href="#pubblicità">Android &rsaquo;</a>
+              </div>
 
             </div>
 
             <div class="col-xs-12 col-md-6 col-lg-6">
+              <div class="pubblicità-bottom">
+                <h1>Find us around</h1>
+                <h4>Find us around the globe</h4>
+                <a href="#pubblicità">Our city &rsaquo;</a>
+              </div>
 
             </div>
 
@@ -142,10 +177,16 @@
         <!-- sezione social -->
         <section class="margin-top">
           <div class="row">
-            <div class="col-xs-12 col-md-12 col-lg-12">
-              <div class="row">
+            <!-- <div class="col-xs-12 col-md-12 col-lg-12">
+              <div id="pachwork">
+                <img src="img/pachwork.jpg" alt="Helbizfamily">
+              </div> -->
+              <div class="row pachwork">
                 <div class="col-xs-offset-2 col-xs-8 col-xs-offset-2 col-md-offset-3 col-md-6 col-md-offset-3 col-lg-offset-4 col-lg-4 col-lg-offset-4">
-
+                  <div class="pachwork-text">
+                    <h3> HelbizFamily</h3>
+                    <!-- inserire icone social -->
+                  </div>
                 </div>
               </div>
 
