--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Epilogue:ital,wght@1,300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Epilogue:wght@500;700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
     <title>Helbiz</title>
   </head>
   <body>
@@ -200,18 +201,45 @@
           <section>
             <div class="row">
               <div class="col-xs-6 col-md-6 col-lg-3">
+                <div id="bottone-footer">
+                  <a href="#footer-button">Helbiz</a>
+                </div>
+              </div>
+
+              <div class="col-xs-6 col-md-6 col-lg-3">
+                <div class="footer-list">
+                  <h3>Product</h3>
+                  <a href="#lista2">HelbizGo</a>
+                  <a href="#lista2">HelbizCar</a>
+                  <a href="#lista2">HelbizAir</a>
+
+                </div>
 
               </div>
 
               <div class="col-xs-6 col-md-6 col-lg-3">
+                <div class="footer-list">
+                  <h3>Product</h3>
+                  <a href="#lista2">HelbizGo</a>
+                  <a href="#lista2">HelbizCar</a>
+                  <a href="#lista2">HelbizAir</a>
+                  <a href="lista2">HelbizGo</a>
+                  <a href="#lista2">HelbizCar</a>
+                  <a href="#lista2">HelbizAir</a>
+                </div>
 
               </div>
 
               <div class="col-xs-6 col-md-6 col-lg-3">
-
-              </div>
-
-              <div class="col-xs-6 col-md-6 col-lg-3">
+                <div class="footer-list">
+                  <h3>Product</h3>
+                  <a href="#lista2">HelbizGo</a>
+                  <a href="#lista2">HelbizCar</a>
+                  <a href="#lista2">HelbizAir</a>
+                  <a href="#lista2">HelbizGo</a>
+                  <a href="#lista2">HelbizCar</a>
+                  <a href="#lista2">HelbizAir</a>
+                </div>
 
               </div>
 
@@ -219,30 +247,40 @@
 
             <div class="row">
               <div class="col-xs-12 col-md-12 col-lg-3">
-
+                <div>
+                  <i class="fab fa-facebook-f"></i>
+                  <i class="fab fa-instagram"></i>
+                  <i class="fab fa-youtube"></i>
+                  <i class="fab fa-twitter"></i>
+                  <i class="fab fa-linkedin-in"></i>
+                </div>
               </div>
 
               <div class="col-xs-4 col-md-4 col-lg-3">
-
+                <a href="#lista3">Terms and conditions</a>
               </div>
 
               <div class="col-xs-4 col-md-4 col-lg-3">
-
+                <a href="#lista3">Press and ews</a>
               </div>
 
               <div class="col-xs-4 col-md-4 col-lg-3">
-
+                <a href="#lista3">&copy;2019Helbiz</a>
               </div>
 
             </div>
 
             <div class="row">
               <div class="col-xs-offset-4 col-xs-2 col-md-offset-4 col-md-2 col-lg-offset-4 col-lg-2 ">
-
+                <div class="jumbo-store">
+                  <a href="#store"><img src="img/google.png" alt="googleplay"></a>
+                </div>
               </div>
 
               <div class="col-xs-2 col-md-2 col-lg-2 ">
-
+                <div class="jumbo-store">
+                  <a href="#store"><img src="img/apple.png" alt="applestore"></a>
+                </div>
               </div>
 
             </div>
