--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
       <header>
         <nav id="nav-large" class="centratura1">
           <div class="row">
-						<div class="col-xs-3 col-md-3  col-lg-3 ">
+						<div class="col-xs-2 col-md-2  col-lg-2 ">
               <div id="bottone">
                 <a href="#">Helbiz</a>
               </div>
 						</div>
-						<div class="col-xs-7  col-xs-offset-2 col-md-7 col-md-offset-2 col-lg-7 col-lg-offset-2">
+						<div class="col-xs-8  col-xs-offset-2 col-md-8 col-md-offset-2 col-lg-8 col-lg-offset-2">
               <div id="list">
                 <a href="#listati">HELBIZGO</a>
                 <a href="#listati">HELBIZCAR</a>
@@ -105,7 +105,6 @@
           <div class="row">
             <div class="col-xs-12 col-md-12 col-lg-12">
               <div id="phone-swipe-top">
-                <img src="img/anziano.jpg" alt="HelbizGo">
               </div>
 
             </div>
@@ -114,19 +113,19 @@
 
           <div class="row">
             <div class="col-xs-12 col-md-12 col-lg-offset-3 col-lg-2">
-              <div class="phone-swipe">
+              <div class="phone-swipe-left">
                 <h2>How does helbiz work?</h2>
               </div>
             </div>
 
             <div class="col-xs-12 col-md-12 col-lg-2">
-              <div class="phone-swipe">
+              <div class="phone-swipe-center">
                 <img src="img/iphone.png" alt="iphone-helbiz">
               </div>
             </div>
 
             <div class="col-xs-12 col-md-12 col-lg-2">
-              <div class="phone-swipe">
+              <div class="phone-swipe-right">
                 <h4>Step 1</h4>
                 <span>Leave curbside when finished</span>
               </div>
@@ -142,29 +141,40 @@
           <div class="row">
             <div class="col-xs-12 col-md-12 col-lg-12">
               <div id="pubblicità-top">
-                <img src="img/scooter.jpg" alt="HelbizGo">
-                <div class="pubblicità-text">
-                  <h1>Smart mobility on two wheels</h1>
-                  <p>A cleaner and more convenient alternative to get around your city
-                  </p>
-                  <a href="#pubblicità">Learn More &rsaquo;</a>
+                <div class="row">
+                  <div class="col-lg-offset-7 col-lg-5">
+                    <div class="pubblicità-text">
+                      <h1>Smart mobility on two wheels</h1>
+                      <p>A cleaner and more convenient alternative to get around your city
+                      </p>
+                      <a href="#pubblicità">Learn More &rsaquo;</a>
+                    </div>
+                  </div>
+                </div>
+
+              </div>
+
+            </div>
+
+            <div class="col-xs-12 col-md-6 col-lg-6">
+              <div class="pubblicità-bottom left">
+                <h1>Get the app</h1>
+                <h4>Download the app and start riding today</h4>
+                <a href="#pubblicità">IOS &rsaquo;</a>
+                <a href="#pubblicità">Android &rsaquo;</a>
+                <div class="row">
+                  <div class="col-xs-12 col-md-12 col-lg-12">
+                    <div id="iphone">
+                      <img src="img/iphone.png" alt="">
+                    </div>
+                  </div>
                 </div>
               </div>
 
             </div>
 
             <div class="col-xs-12 col-md-6 col-lg-6">
-              <div class="pubblicità-bottom">
-                <h1>Get the app</h1>
-                <h4>Download the app and start riding today</h4>
-                <a href="#pubblicità">IOS &rsaquo;</a>
-                <a href="#pubblicità">Android &rsaquo;</a>
-              </div>
-
-            </div>
-
-            <div class="col-xs-12 col-md-6 col-lg-6">
-              <div class="pubblicità-bottom">
+              <div class="pubblicità-bottom right">
                 <h1>Find us around</h1>
                 <h4>Find us around the globe</h4>
                 <a href="#pubblicità">Our city &rsaquo;</a>
@@ -178,15 +188,14 @@
         <!-- sezione social -->
         <section class="margin-top">
           <div class="row">
-            <!-- <div class="col-xs-12 col-md-12 col-lg-12">
-              <div id="pachwork">
-                <img src="img/pachwork.jpg" alt="Helbizfamily">
-              </div> -->
               <div class="row pachwork">
                 <div class="col-xs-offset-2 col-xs-8 col-xs-offset-2 col-md-offset-3 col-md-6 col-md-offset-3 col-lg-offset-4 col-lg-4 col-lg-offset-4">
                   <div class="pachwork-text">
-                    <h3> HelbizFamily</h3>
-                    <!-- inserire icone social -->
+                    <h3> &num;HelbizFamily</h3>
+                    <i class="fab fa-facebook-f"></i>
+                    <i class="fab fa-instagram"></i>
+                    <i class="fab fa-youtube"></i>
+                    <i class="fab fa-twitter"></i>
                   </div>
                 </div>
               </div>
@@ -199,7 +208,7 @@
         <!-- footer -->
         <footer class="centratura1 margin-top">
           <section>
-            <div class="row">
+            <div class="row padding-footer">
               <div class="col-xs-6 col-md-6 col-lg-3">
                 <div id="bottone-footer">
                   <a href="#footer-button">Helbiz</a>
@@ -219,11 +228,10 @@
 
               <div class="col-xs-6 col-md-6 col-lg-3">
                 <div class="footer-list">
-                  <h3>Product</h3>
+                  <h3>Info</h3>
                   <a href="#lista2">HelbizGo</a>
                   <a href="#lista2">HelbizCar</a>
                   <a href="#lista2">HelbizAir</a>
-                  <a href="lista2">HelbizGo</a>
                   <a href="#lista2">HelbizCar</a>
                   <a href="#lista2">HelbizAir</a>
                 </div>
@@ -232,7 +240,7 @@
 
               <div class="col-xs-6 col-md-6 col-lg-3">
                 <div class="footer-list">
-                  <h3>Product</h3>
+                  <h3>Helbiz</h3>
                   <a href="#lista2">HelbizGo</a>
                   <a href="#lista2">HelbizCar</a>
                   <a href="#lista2">HelbizAir</a>
@@ -245,7 +253,7 @@
 
             </div>
 
-            <div class="row">
+            <div class="row padding-footer">
               <div class="col-xs-12 col-md-12 col-lg-3">
                 <div>
                   <i class="fab fa-facebook-f"></i>
@@ -261,7 +269,7 @@
               </div>
 
               <div class="col-xs-4 col-md-4 col-lg-3">
-                <a href="#lista3">Press and ews</a>
+                <a href="#lista3">Press and news</a>
               </div>
 
               <div class="col-xs-4 col-md-4 col-lg-3">
