--- a/index.html
+++ b/index.html
@@ -101,35 +101,31 @@
 
 
         <!-- sezione smarthphone swipe -->
-        <section class="margin-top">
-          <div class="row">
-            <div class="col-xs-12 col-md-12 col-lg-12">
-              <div id="phone-swipe-top">
-              </div>
-
-            </div>
-
-          </div>
+        <section class="margin-top old-phone">
 
           <div class="row">
-            <div class="col-xs-12 col-md-12 col-lg-offset-3 col-lg-2">
-              <div class="phone-swipe-left">
-                <h2>How does helbiz work?</h2>
-              </div>
-            </div>
 
-            <div class="col-xs-12 col-md-12 col-lg-2">
+            <div class="col-lg-12">
               <div class="phone-swipe-center">
-                <img src="img/iphone.png" alt="iphone-helbiz">
-              </div>
-            </div>
+                <img src="img/iphone.png" alt="">
 
-            <div class="col-xs-12 col-md-12 col-lg-2">
-              <div class="phone-swipe-right">
-                <h4>Step 1</h4>
-                <span>Leave curbside when finished</span>
-              </div>
+                <div class="row">
+                  <div class="col-lg-offset-2 col-lg-2">
+                    <div id="phone-sx">
+                      <span>How does Helbiz work?</span>
+                    </div>
+                  </div>
 
+                  <div class="col-lg-offset-4 col-lg-4">
+                    <div id="phone-dx">
+                      <h3>Step 1</h3>
+                      <span>Leave curbside when finished</span>
+                    </div>
+
+                  </div>
+
+                </div>
+              </div>
             </div>
 
           </div>
@@ -153,36 +149,37 @@
                 </div>
 
               </div>
-
             </div>
+          </div>
 
-            <div class="col-xs-12 col-md-6 col-lg-6">
-              <div class="pubblicità-bottom left">
-                <h1>Get the app</h1>
-                <h4>Download the app and start riding today</h4>
-                <a href="#pubblicità">IOS &rsaquo;</a>
-                <a href="#pubblicità">Android &rsaquo;</a>
-                <div class="row">
-                  <div class="col-xs-12 col-md-12 col-lg-12">
-                    <div id="iphone">
-                      <img src="img/iphone.png" alt="">
+            <div class="row margin-top">
+              <div class="col-xs-12 col-md-6 col-lg-6">
+                <div class="pubblicità-bottom left">
+                  <h1>Get the app</h1>
+                  <h4>Download the app and start riding today</h4>
+                  <a href="#pubblicità">IOS &rsaquo;</a>
+                  <a href="#pubblicità">Android &rsaquo;</a>
+                  <div class="row">
+                    <div class="col-xs-12 col-md-12 col-lg-12">
+                      <div id="iphone">
+                        <img src="img/iphone.png" alt="">
+                      </div>
                     </div>
                   </div>
+                </div>
+
+              </div>
+
+              <div class="col-xs-12 col-md-6 col-lg-6">
+                <div class="pubblicità-bottom right">
+                  <h1>Find us around</h1>
+                  <h4>Find us around the globe</h4>
+                  <a href="#pubblicità">Our city &rsaquo;</a>
                 </div>
               </div>
 
             </div>
 
-            <div class="col-xs-12 col-md-6 col-lg-6">
-              <div class="pubblicità-bottom right">
-                <h1>Find us around</h1>
-                <h4>Find us around the globe</h4>
-                <a href="#pubblicità">Our city &rsaquo;</a>
-              </div>
-
-            </div>
-
-          </div>
         </section>
 
         <!-- sezione social -->
