esercizio completo senza menu hamburguer

--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
       <header>
         <nav id="nav-large" class="centratura1">
           <div class="row">
-						<div class="col-xs-2 col-md-2  col-lg-2 ">
+						<div class="col-xs-1 col-md-2  col-lg-2 ">
               <div id="bottone">
                 <a href="#">Helbiz</a>
               </div>
 						</div>
-						<div class="col-xs-8  col-xs-offset-2 col-md-8 col-md-offset-2 col-lg-8 col-lg-offset-2">
+						<div class="col-xs-12  col-md-8 col-md-offset-2  col-lg-8 col-lg-offset-2">
               <div id="list">
                 <a href="#listati">HELBIZGO</a>
                 <a href="#listati">HELBIZCAR</a>
@@ -49,13 +49,13 @@
                 <h2>Shared Mobility Of Tomorrow</h2>
                 <h5>Bringing the future of shared mobility to the streets of the world</h5>
                 <div class="row">
-                  <div class="col-lg-offset-4 col-lg-2">
+                  <div class="col-xs-offset-4 col-xs-2 col-md-offset-4 col-md-2 col-lg-offset-4 col-lg-2">
                     <div class="jumbo-store">
                       <a href="#store"><img src="img/apple.png" alt="applestore"></a>
                     </div>
                   </div>
 
-                  <div class="col-lg-2">
+                  <div class="col-xs-2 col-md-2 col-lg-2">
                     <div class="jumbo-store">
                       <a href="#store"><img src="img/google.png" alt="googleplay"></a>
                     </div>
@@ -105,18 +105,18 @@
 
           <div class="row">
 
-            <div class="col-lg-12">
+            <div class="col-md-12 col-lg-12">
               <div class="phone-swipe-center">
                 <img src="img/iphone.png" alt="">
 
                 <div class="row">
-                  <div class="col-lg-offset-2 col-lg-2">
+                  <div class="col-xs-12 col-md-12 col-lg-offset-2 col-lg-2">
                     <div id="phone-sx">
                       <span>How does Helbiz work?</span>
                     </div>
                   </div>
 
-                  <div class="col-lg-offset-4 col-lg-4">
+                  <div class="col-xs-12 col-md-12 col-lg-offset-4 col-lg-4">
                     <div id="phone-dx">
                       <h3>Step 1</h3>
                       <span>Leave curbside when finished</span>
@@ -187,7 +187,7 @@
           <div class="row">
               <div class="row pachwork">
                 <div class="col-xs-offset-2 col-xs-8 col-xs-offset-2 col-md-offset-3 col-md-6 col-md-offset-3 col-lg-offset-4 col-lg-4 col-lg-offset-4">
-                  <div class="pachwork-text">
+                  <div id="pachwork-text">
                     <h3> &num;HelbizFamily</h3>
                     <i class="fab fa-facebook-f"></i>
                     <i class="fab fa-instagram"></i>
@@ -252,7 +252,7 @@
 
             <div class="row padding-footer">
               <div class="col-xs-12 col-md-12 col-lg-3">
-                <div>
+                <div id="icons">
                   <i class="fab fa-facebook-f"></i>
                   <i class="fab fa-instagram"></i>
                   <i class="fab fa-youtube"></i>
@@ -262,15 +262,24 @@
               </div>
 
               <div class="col-xs-4 col-md-4 col-lg-3">
-                <a href="#lista3">Terms and conditions</a>
+                <div class="conditions">
+                  <a href="#lista3">Terms and conditions</a>
+                </div>
+
               </div>
 
               <div class="col-xs-4 col-md-4 col-lg-3">
-                <a href="#lista3">Press and news</a>
+                <div class="conditions">
+                  <a href="#lista3">Press and news</a>
+                </div>
+
               </div>
 
               <div class="col-xs-4 col-md-4 col-lg-3">
-                <a href="#lista3">&copy;2019Helbiz</a>
+                <div class="conditions">
+                  <a href="#lista3">&copy;2019Helbiz</a>
+                </div>
+
               </div>
 
             </div>
