correzione img iphone trasparente

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
             <div class="col-md-12 col-lg-12">
               <div class="phone-swipe-center">
-                <img src="img/iphone.png" alt="">
+                <img src="img/iphone2.png" alt="">
 
                 <div class="row">
                   <div class="col-xs-12 col-md-12 col-lg-offset-2 col-lg-2">
