--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <section class="centratura2 margin-top">
           <div class="row">
             <div class="col-xs-12  col-md-6  col-lg-6 ">
-              <div class="prodotti">
+              <div class="prodotti sinistro">
                 <h3>HelbizGo</h3>
                 <span>Seamless E-Scooter sharing globally.</span>
                 <a href="#prodotti">Learn More &rsaquo;</a>
